# hackathon-1-new

./: .gitignore  AUTH_SKILL_SUMMARY.md  FRONTEND_AUTH_IMPLEMENTATION.md  RAILWAY_DEPLOYMENT_GUIDE.md  TESTING_GUIDE.md  VERCEL_DEPLOYMENT_GUIDE.md
.claude/: settings.local.json
.claude/skills/: AUTH_SKILL_README.md  auth.md  auth.sh  chatbot-test.md  chatbot-test.sh  rag-diagnostics.md  rag-diagnostics.sh
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
Physical AI & Humanoid Robotics/: README.md
Physical-AI-Humanoid-Robotics/: README.md  docusaurus.config.ts
agents/: README.md  chatbot_integration_agent.py  rag_pipeline_agent.py
backend/: .gitignore  pyproject.toml  vercel.json
backend/app/: main.py
backend/app/services/: translation_service.py
backend/scripts/: ingest_data.py
backend/tests/: test_auth.py  test_chat.py  test_translate.py
frontend/: docusaurus.config.ts  package-lock.json  sidebars.ts  vercel.json
frontend/docs/capstone-project/: week-13.mdx
frontend/static/: test.html
history/: RAG_Chatbot_Implementation.md
history/adr/: 001-leverage-existing-rag-chatbot-implementation.md
specs/: sp.constitution  sp.plan  sp.specify  sp.task
specs/001-create-book-plan/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-chatbot-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/auth-feature/: 01-constitution.md  02-specification.md  03-plan.md  04-tasks.md  05-implement.md
(+69 files in other folders)
